exclusive monitor and MOESI protocol

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -47,6 +47,8 @@ layout: default
       </section>
 
       <footer class="page__meta">
+        <h2> 관련 내용에 대한 질문이나 태클을 환영합니다. 댓글 남겨주세요. </h2>	
+	  <br/><br/>
         {% if site.data.ui-text[site.locale].meta_label %}
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
         {% endif %}
