--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,5 @@
 <!-- start custom footer snippets -->
 
+안녕하세요! TOT0Ro의 Kernel Blog 입니다. 어메이징한 Kernel 개발자를 목표로 하고 있습니다.
+
 <!-- end custom footer snippets -->
