iamroot history modi, archive date

--- a/_includes/documents-collection.html
+++ b/_includes/documents-collection.html
@@ -14,11 +14,13 @@
   {% endif %}
 {% endif %}
 
+{% if include.collection == 'iamroot-history' %}
 <hr>
 <p style="font-size:17px">
   {% include iamroot-history-short.html %}
 </p>
 <hr>
+{% endif %}
 
 {%- for post in entries -%}
   {% include archive-single.html %}
