--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -33,7 +33,7 @@
     {% if post.date or post.excerpt %}
     <p class="archive__item-excerpt" itemprop="description">
     {% if post.excerpt %}{{ post.excerpt | markdownify | strip_html | truncate: 160 }}{% endif %}
-    {% if post.date %}<font color="#888888">(<i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y" }}</time>)</font> {% endif %}
+    {% if post.date %}<font color="#AAAAAA">(<i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y" }}</time>)</font> {% endif %}
     </p>
     {% endif %}
   </article>
