--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -269,6 +269,31 @@
   a {
     color: inherit;
   }
+
+  h1 {
+    margin-top: 0;
+    font-size: $type-size-3;
+  }
+  
+  h2 {
+    font-size: $type-size-4;
+  }
+  
+  h3 {
+    font-size: $type-size-5;
+  }
+  
+  h4 {
+    font-size: $type-size-6;
+  }
+  
+  h5 {
+    font-size: $type-size-6;
+  }
+  
+  h6 {
+    font-size: $type-size-6;
+  }
 }
 
 .page__meta-title {
