--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
 
-안녕하세요! TOT0Ro의 Kernel Blog 입니다.
+안녕하세요! TOT0Ro의 Blog 입니다.
 
 <!-- end custom footer snippets -->
